--- a/config.org
+++ b/config.org
@@ -1,7 +1,7 @@
 #+title: My Custom Config
 #+author: Harsh Vyapari (harshv5094)
 #+date: <2024-10-25 Fri>
-#+startup: showeverything
+#+startup: overview
 
 * Table Of Contents :toc:
 - [[#basic-configuration][Basic Configuration]]
@@ -15,15 +15,20 @@
   - [[#setting-up-terminal-keybinding][Setting up Terminal Keybinding]]
 - [[#org-mode-settings][Org Mode Settings]]
   - [[#org-auto-tangle][Org auto tangle]]
-  - [[#org-mode-directories][Org Mode Directories]]
+  - [[#org-agenda-default-location][Org Agenda Default Location]]
+  - [[#org-header-defaut-font-size][Org Header Defaut Font Size]]
+  - [[#org-mode-directory-default-location][Org Mode Directory Default location]]
   - [[#org-journal-config][Org Journal Config]]
+  - [[#org-roam-directory-default-location][Org Roam directory default location]]
 
 * Basic Configuration
 
 ** Beacon Mode
 To find cursor anywhere
 #+begin_src emacs-lisp
+; Beacon Mode -> Allows user to show cursor
 (beacon-mode 1)
+(beacon-blink-automated)
 #+end_src
 
 ** Changing Banner
@@ -54,6 +59,9 @@ Here I'm setting custom doom emacs banner
 ;;(remove-hook '+doom-dashboard-functions #'doom-dashboard-widget-shortmenu)
 #+end_src
 
+#+RESULTS:
+: my-custom-banner
+
 ** Doom theme
 Setting default theme
 #+begin_src emacs-lisp
@@ -72,9 +80,24 @@ Here we are adding keybinds to edit doom emacs config files
 #+end_src
 
 ** Font Family
-Setting default font
+Settings related to fonts within Doom Emacs:
+
+- ~doom-font~ - Standard monospace font that is used for most things in Emacs.
+- ~doom-variable-pitch-font~ Variable font which is useful in some Emacs plugin.
+- ~doom-big-font~ - Used in ~doom-big-font-mode~; useful for presentation.
+- ~font-lock-comment-face~ - for comments.
+- ~font-lock-keyword-face~ - for keywords with special significance like ~setq~ in elisp.
+
 #+begin_src emacs-lisp
-(setq doom-font (font-spec :family "JetBrainsMono Nerd Font" :size 15 :weight 'regular))
+(setq doom-font (font-spec :family "JetBrainsMono Nerd Font" :size 15)
+      doom-variable-pitch-font (font-spec :family "Ubuntu" :size 15)
+      doom-big-font (font-spec :family "JetBrainsMono Nerd Font" :size 20))
+(after! doom-themes
+  (setq doom-themes-enable-bold t
+        doom-themes-enable-italic t))
+(custom-set-faces!
+  '(font-lock-comment-face :slant italic)
+  '(font-lock-keyword-face :slant italic))
 #+end_src
 
 ** Relative Line Number
@@ -120,18 +143,48 @@ A buffer can get out of sync with respect to its visited file on disk if that fi
       :desc "Insert auto_tangle tag" "i a" #'hv/insert-auto-tangle-tag)
 #+end_src
 
-** Org Mode Directories
+** Org Agenda Default Location
+Here we are defining default location of org agenda files
+#+begin_src emacs-lisp
+(after! org
+  (setq org-agenda-files "~/org/agenda.org"))
+#+end_src
+
+** Org Header Defaut Font Size
+Here is my custom function ~my-custom-header~ to change the font size of the org headings.
+
+#+begin_src emacs-lisp
+; NOTE Custom function to change header size
+(defun my-custom-header ()
+  "Enable Doom Emacs Custom Header Size"
+  (interactive)
+  (with-eval-after-load 'org-faces
+    (set-face-attribute 'org-document-title nil :font doom-big-font :weight 'bold :height 1.7)
+  (dolist
+      (face
+       '((org-level-1 1.6)
+         (org-level-2 1.5)
+         (org-level-3 1.4)
+         (org-level-4 1.3)
+         (org-level-5 1.2)
+         (org-level-6 1.1)
+         (org-level-7 1.0)
+         (org-level-8 0.9)))
+    (set-face-attribute (nth 0 face) nil :font doom-font :weight 'bold :height (nth 1 face)))))
+(my-custom-header)
+#+end_src
+
+** Org Mode Directory Default location
 Setting different org directories default path default path
 #+begin_src emacs-lisp
 ; NOTE Default Org Directory
 (setq org-directory "~/org/")
 ; NOTE Default Note File
-(setq org-default-notes-file (concat org-directory "/refile.org"))
-; NOTE Default Org Roam Directory
-(setq org-roam-directory "~/notebook/")
+(setq org-default-notes-file (concat org-directory "/notes.org"))
 #+end_src
 
 ** Org Journal Config
+Setting Org Journal Default location
 #+begin_src emacs-lisp
 ; NOTE Setting up org journal directory
 (setq org-journal-dir "~/org/journal/"
@@ -141,3 +194,9 @@ Setting different org directories default path default path
       org-journal-file-format "%Y-%m-%d.org")
 #+end_src
 
+** Org Roam directory default location
+Setting up Org Roam Default location
+#+begin_src emacs-lisp
+; NOTE Default Org Roam Directory
+(setq org-roam-directory "~/notebook/")
+#+end_src
