--- a/config.org
+++ b/config.org
@@ -64,7 +64,7 @@ Here I'm setting custom doom emacs banner
 ** Doom theme
 Setting default theme
 #+begin_src emacs-lisp
-(setq doom-theme 'doom-one-light)
+(setq doom-theme 'doom-one)
 #+end_src
 
 ** Edit Specific file
