chore: turning off custom banner

--- a/config.org
+++ b/config.org
@@ -55,7 +55,7 @@ Here I'm setting custom doom emacs banner
                "\n"))
      'face 'doom-dashboard-banner)))
 
-(setq +doom-dashboard-ascii-banner-fn #'my-custom-banner)
+;;(setq +doom-dashboard-ascii-banner-fn #'my-custom-banner)
 ;;(remove-hook '+doom-dashboard-functions #'doom-dashboard-widget-shortmenu)
 #+end_src
 
