--- a/config.org
+++ b/config.org
@@ -137,7 +137,7 @@ Here is my custom function ~my-custom-header~ to change the font size of the org
          (org-level-6 1.1)
          (org-level-7 1.0)
          (org-level-8 0.9)))
-    (set-face-attribute (nth 0 face) nil :font doom-font :weight 'bold :slant 'italic :height (nth 1 face)))))
+    (set-face-attribute (nth 0 face) nil :font doom-font :weight 'bold :height (nth 1 face)))))
 (my-custom-header)
 #+end_src
 
