--- a/config.org
+++ b/config.org
@@ -55,7 +55,7 @@ Settings related to fonts within Doom Emacs:
 
 #+begin_src emacs-lisp
 (setq doom-font (font-spec :family "JetBrainsMono Nerd Font" :size 15)
-      doom-variable-pitch-font (font-spec :family "JetBrainsMonoNL Nerd Font" :size 15)
+      doom-variable-pitch-font (font-spec :family "FiraCode Nerd Font Mono" :size 15)
       doom-big-font (font-spec :family "JetBrainsMono Nerd Font" :size 20))
 (after! doom-themes
   (setq doom-themes-enable-bold t
@@ -137,7 +137,7 @@ Here is my custom function ~my-custom-header~ to change the font size of the org
          (org-level-6 1.2)
          (org-level-7 1.1)
          (org-level-8 1.0)))
-    (set-face-attribute (nth 0 face) nil :font doom-font :weight 'bold :height (nth 1 face)))))
+    (set-face-attribute (nth 0 face) nil :font doom-variable-pitch-font :weight 'bold :height (nth 1 face)))))
 (my-custom-header)
 #+end_src
 
