--- a/config.org
+++ b/config.org
@@ -14,6 +14,7 @@
   - [[#modeline][Modeline]]
 - [[#markdown][Markdown]]
   - [[#markdown-headers][Markdown Headers]]
+- [[#mouse-support][Mouse Support]]
 - [[#org-mode-settings][Org Mode Settings]]
   - [[#org-agenda-default-file][Org agenda default file]]
   - [[#org-auto-tangle][Org auto tangle]]
@@ -104,6 +105,13 @@ Here we are giving markdown header some height.
  '(markdown-header-face-4 ((t (:inherit markdown-header-face :height 1.4))))
  '(markdown-header-face-5 ((t (:inherit markdown-header-face :height 1.3))))
  '(markdown-header-face-6 ((t (:inherit markdown-header-face :height 1.2)))))
+#+end_src
+
+
+* Mouse Support
+Adding the mouse support to the terminal version of the emacs
+#+begin_src emacs-lisp
+(xterm-mouse-mode 1)
 #+end_src
 
 * Org Mode Settings
