--- a/config.org
+++ b/config.org
@@ -5,35 +5,57 @@
 
 * Table Of Contents :toc:
 - [[#basic-configuration][Basic Configuration]]
-  - [[#beacon-mode][Beacon Mode]]
+  - [[#-auto-shutdown-emacs-daemon-after-inactivity][💤 Auto-shutdown Emacs daemon after inactivity]]
   - [[#doom-theme][Doom theme]]
   - [[#edit-specific-file][Edit Specific file]]
   - [[#font-family][Font Family]]
-  - [[#relative-line-number][Relative Line Number]]
   - [[#global-auto-revert][Global Auto Revert]]
   - [[#modeline][Modeline]]
+  - [[#relative-line-number][Relative Line Number]]
 - [[#markdown][Markdown]]
   - [[#markdown-headers][Markdown Headers]]
 - [[#mouse-support][Mouse Support]]
 - [[#org-mode-settings][Org Mode Settings]]
   - [[#org-agenda-default-file][Org agenda default file]]
-  - [[#org-auto-tangle][Org auto tangle]]
   - [[#org-header-defaut-font-size][Org Header Defaut Font Size]]
   - [[#org-mode-directory-default-location][Org Mode Directory Default location]]
   - [[#org-journal-config][Org Journal Config]]
-  - [[#org-roam-directory-default-location][Org Roam directory default location]]
 
 * Basic Configuration
 
-** Beacon Mode
+** 💤 Auto-shutdown Emacs daemon after inactivity
+When running Emacs as a daemon, it can be nice to have it automatically exit
+after a period of inactivity — for example, when all client frames are closed
+and no buffers are being used.
+
+This block defines a timer that checks periodically whether:
+- Emacs is running as a daemon (`daemonp`)
+- There are no open frames (`frame-list`)
+- There are no connected clients (`server-clients`)
+If all are true for a given time interval (e.g. 10 minutes), Emacs will shut down cleanly.
+
 #+begin_src emacs-lisp
-(beacon-mode 1)
+;; Auto-shutdown daemon after 10 minutes of inactivity
+(run-with-idle-timer
+ (* 10 60)  ; 10 minutes in seconds
+ t           ; repeat timer
+ (lambda ()
+   (when (and (daemonp)
+              ;; Ignore special invisible frames
+              (null (seq-filter (lambda (f)
+                                  (frame-visible-p f))
+                                (frame-list)))
+              ;; No emacsclients connected
+              (zerop (length server-clients)))
+     (message "No clients or visible frames for 10 minutes — shutting down daemon.")
+     (save-some-buffers t)
+     (kill-emacs))))
 #+end_src
 
 ** Doom theme
 Setting default theme
 #+begin_src emacs-lisp
-(setq doom-theme 'doom-one)
+(setq doom-theme 'doom-gruvbox)
 #+end_src
 
 ** Edit Specific file
@@ -68,13 +90,6 @@ Settings related to fonts within Doom Emacs:
   '(font-lock-keyword-face :slant italic))
 #+end_src
 
-** Relative Line Number
-Enable relative line number
-#+begin_src emacs-lisp
-; NOTE setting relative line number
-(setq display-line-numbers-type 'relative)
-#+end_src
-
 ** Global Auto Revert
 A buffer can get out of sync with respect to its visited file on disk if that file is changed by another program. To keep it up to date, you can enable Auto Revert mode by typing M-x auto-revert-mode, or you can set it to be turned on globally with ‘global-auto-revert-mode’.  I have also turned on Global Auto Revert on non-file buffers, which is especially useful for ‘dired’ buffers.
 #+begin_src emacs-lisp
@@ -91,6 +106,14 @@ The modeline is the bottom status bar that appears in Emacs windows. For more in
       doom-modeline-persp-name t                 ;; adds perspective name to modeline
       doom-modeline-persp-icon t)                ;; adds folder icon next to persp name
 #+end_src
+
+** Relative Line Number
+Enable relative line number
+#+begin_src emacs-lisp
+; NOTE setting relative line number
+(setq display-line-numbers-type 'relative)
+#+end_src
+
 
 
 * Markdown
@@ -124,47 +147,22 @@ Setting up org agenda default file name
   (setq org-agenda-files '("~/org/agenda.org")))
 #+end_src
 
-** Org auto tangle
-~org-auto-tangle~ allows you to add the option ~#+auto_tangle: t~ in your Org file so that it automatically tangles when you save the document.
-#+begin_src emacs-lisp
-(use-package! org-auto-tangle
-  :defer t
-  :hook (org-mode . org-auto-tangle-mode)
-  :config
-  (setq org-auto-tangle-default t))
-
-(defun insert-auto-tangle-tag ()
-  "Insert auto-tangle tag in a literate config."
-  (interactive)
-  (evil-org-open-below 1)
-  (insert "#+auto_tangle: t ")
-  (evil-force-normal-state))
-
-(map! :leader
-      :desc "Insert auto_tangle tag" "i a" #'insert-auto-tangle-tag)
-#+end_src
-
 ** Org Header Defaut Font Size
 Here is my custom function ~my-custom-header~ to change the font size of the org headings.
 
 #+begin_src emacs-lisp
 ; NOTE Custom function to change header size
-(defun my-custom-header ()
-  "Enable Doom Emacs Custom Header Size"
-  (interactive)
-  (with-eval-after-load 'org-faces
-  (dolist
-      (face
-       '((org-level-1 1.7)
-         (org-level-2 1.6)
-         (org-level-3 1.5)
-         (org-level-4 1.4)
-         (org-level-5 1.3)
-         (org-level-6 1.2)
-         (org-level-7 1.1)
-         (org-level-8 1.0)))
-    (set-face-attribute (nth 0 face) nil :font doom-variable-pitch-font :height (nth 1 face)))))
-(my-custom-header)
+(custom-theme-set-faces!
+'doom-gruvbox
+'(org-level-8 :inherit outline-3 :height 1.0)
+'(org-level-7 :inherit outline-3 :height 1.0)
+'(org-level-6 :inherit outline-3 :height 1.1)
+'(org-level-5 :inherit outline-3 :height 1.2)
+'(org-level-4 :inherit outline-3 :height 1.3)
+'(org-level-3 :inherit outline-3 :height 1.4)
+'(org-level-2 :inherit outline-2 :height 1.5)
+'(org-level-1 :inherit outline-1 :height 1.6)
+'(org-document-title  :height 1.8 :bold t :underline nil))
 #+end_src
 
 ** Org Mode Directory Default location
@@ -185,11 +183,4 @@ Setting Org Journal Default location
       org-journal-time-prefix "** "
       org-journal-date-format "%B %d, %Y (%A) "
       org-journal-file-format "%Y-%m-%d.org")
-#+end_src
-
-** Org Roam directory default location
-Setting up Org Roam Default location
-#+begin_src emacs-lisp
-; NOTE Default Org Roam Directory
-(setq org-roam-directory "~/notebook")
 #+end_src
